--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.profiles.active=local
 spring.datasource.url=jdbc:postgresql://dpg-cigs485gkuvojjbc4360-a.oregon-postgres.render.com:5432/deploy_database
 spring.datasource.username=deploy_database_user
 spring.datasource.password=z4JNEOlrIs1Axratoh5PtGRHdmkLcFrP
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
