--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,12 +1,12 @@
-# Set the active profile
-spring.profiles.active=local
-
-
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=breej
-spring.data.mongodb.auto-index-creation=true
-
-logging.level.org.springframework.web=debug
-server.port=3000
-
+## Set the active profile
+#spring.profiles.active=local
+#
+#
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=breej
+#spring.data.mongodb.auto-index-creation=true
+#
+#logging.level.org.springframework.web=debug
+#server.port=3000
+#
