--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
+# Set the active profile
+spring.profiles.active=local
+
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=breej
+spring.data.mongodb.auto-index-creation=true
+
+logging.level.org.springframework.web=debug
+server.port=3000
+
 
 # PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://dpg-cigs485gkuvojjbc4360-a.oregon-postgres.render.com:5432/deploy_database
