--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
-## Set the active profile
-#spring.profiles.active=local
-#
-#
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=breej
-#spring.data.mongodb.auto-index-creation=true
-#
-#logging.level.org.springframework.web=debug
-#server.port=3000
-#
+# Set the active profile
+spring.profiles.active=local
+
+
+
 
 # PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://dpg-cigs485gkuvojjbc4360-a.oregon-postgres.render.com:5432/deploy_database
@@ -17,3 +10,12 @@ spring.datasource.username=deploy_database_user
 spring.datasource.password=z4JNEOlrIs1Axratoh5PtGRHdmkLcFrP
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=breej
+spring.data.mongodb.auto-index-creation=true
+
+logging.level.org.springframework.web=debug
+server.port=3000
