--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.username=deploy_database_user
 spring.datasource.password=z4JNEOlrIs1Axratoh5PtGRHdmkLcFrP
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+server.tomcat.accesslog.enabled=true
 
 
 spring.data.mongodb.uri=mongodb://docker:mongopw@localhost:49153/breej
