--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.profiles.active=local
 
 
 # PostgreSQL configuration
-spring.datasource.url=jdbc:postgresql://dpg-cigs485gkuvojjbc4360-a.oregon-postgres.render.com:5432/deploy_database
+spring.datasource.url=jdbc:postgresql://dpg-cigs485gkuvojjbc4360-a/deploy_database
 spring.datasource.username=deploy_database_user
 spring.datasource.password=z4JNEOlrIs1Axratoh5PtGRHdmkLcFrP
 spring.datasource.driver-class-name=org.postgresql.Driver
