--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Set the active profile
 spring.profiles.active=local
 
+spring.data.mongodb.uri=mongodb+srv://Prince:Prince@cluster0.uu0guxt.mongodb.net/breej
 
 
 
